fix: Remove background attachment to avoid bug on mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,7 +34,6 @@ th {
   background-position: center;
   background-size: cover;
   background-blend-mode: darken;
-  background-attachment: fixed;
 }
 
 :target {
